fix the overflow-x

--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -1,6 +1,7 @@
 /*landing*/
 body {
     margin: 0px;
+    overflow-x: hidden;
 }
 
 textarea{
